--- a/DemoApi/appsettings.json
+++ b/DemoApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BuildingsDatabaseConnection": "Data Source=Storage\\buildings.db"
+  }
 }
